etc/iptables-save
# Generated by iptables-save v1.4.14 on Wed Feb 25 07:05:17 2015
*filter
:INPUT ACCEPT [27290312:1146427442]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [27366721:1169929468]
:BAN - [0:0]
:EXTERN - [0:0]
:RATELIMIT - [0:0]
-A INPUT -i eth0 -j EXTERN
-A BAN -j SET --add-set banned-copy src
-A BAN -j SET --add-set banned src
-A BAN -m recent --remove --name DEFAULT --rsource -j DROP
-A EXTERN -m state --state RELATED,ESTABLISHED -j ACCEPT
-A EXTERN -m comment --comment "all new connections"
-A EXTERN ! -p tcp -j DROP
-A EXTERN -m comment --comment "new tcp connections"
-A EXTERN -m set --match-set china src -j DROP
-A EXTERN -p tcp -m multiport --dports 443 -j ACCEPT
-A EXTERN -p tcp -m multiport --dports 22,443 -j RATELIMIT
-A EXTERN -m comment --comment "tcp service closed" -j DROP
-A RATELIMIT -m set --match-set badips src
-A RATELIMIT -m set --match-set banned src -j DROP
-A RATELIMIT -m recent --update --hitcount 6 --name DEFAULT --rsource -j BAN
-A RATELIMIT -m recent --set --name DEFAULT --rsource -j ACCEPT
COMMIT
# Completed on Wed Feb 25 07:05:17 2015
